@@ -86,7 +86,7 @@ ssnvQuality_LowerBound = 15
 # Somatic quality score (QSI_NT, NT=ref) below which somatic indels
 # are marked as filtered:
 #
-sindelQuality_LowerBound = 30
+sindelQuality_LowerBound = 40
 
 #
 # Tolerance of tumor contamination in the normal sample
