@@ -1,5 +1,6 @@
+- STREL-332 Revert to core somatic indel scoring with adjusted threshold
 - STREL-331 left-shift indels inside of active regions
-- STREL-248 update somatic EVS to include isaac04 data in training
+- STREL-248 update somatic EVS to include isaac4 data in training
 - STREL-321 fix rare shared variant prefix issue in multi-sample analysis
 - STREL-322 fix VCF namespace conflict on INFO/EVS
 - STREL-200 Adjust mitochondrial strand-bias for consistency with autosomes
